src/objects/FAQlegacy__kav.object
<CustomObject><fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FAQ_s</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Article_Expiration_Date__c</fullName>
        <label>Article Expiration Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Attachment_1__c</fullName>
        <description>FAQ Attachment 1</description>
        <label>Attachment 1</label>
        <type>File</type>
    </fields><fields>
        <fullName>Attachment_2__c</fullName>
        <description>Attachment 2</description>
        <label>Attachment 2</label>
        <type>File</type>
    </fields><fields>
        <fullName>Attachment_3__c</fullName>
        <description>Attachment 3</description>
        <label>Attachment 3</label>
        <type>File</type>
    </fields><fields>
        <fullName>Feedback__c</fullName>
        <formula>HYPERLINK("mailto:" &amp; "casesolutions@trade.gov" &amp; "?subject=Feedback for " + "Article Number: " + ArticleNumber + " / " + "Article Title - " + Title, "Send email to provide feedback or contribute to this FAQ.")</formula>
        <label>Feedback</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields><articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>InDevelopment</deploymentStatus><description>ITA's frequently asked questions</description><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><label>FAQ's</label><pluralLabel>FAQ's</pluralLabel></CustomObject>